--- a/register.html
+++ b/register.html
@@ -70,7 +70,9 @@
 
         <div class="container">
 
-            <a href="login.html" class="boton-regreso"> </a>
+            <div class="titulo">
+                <a href="login.html"><img src="img/iconos/atras.png" width="30" height="30"></a>
+            </div>
 
             <!-- Sección del formulario -->
             <div class="form-section">
