--- a/login.html
+++ b/login.html
@@ -65,15 +65,17 @@
     <!--LOGIN--->
 
     <!--Main-->
-
     <main class="main">
 
         <div class="container">
 
-            <a href="index.html" class="boton-regreso"> </a>
-
+            <div class="titulo">
+                <a href="index.html"><img src="img/iconos/atras.png" width="30" height="30"></a>
+            </div>
+            
             <!-- Sección del formulario -->
             <div class="form-section">
+
                 <h1 class="title-login">Acceso a cuenta</h1>
                 <form>  
                     <label class="subtitle-login">Correo Electrónico</label>
