--- a/login.html
+++ b/login.html
@@ -13,6 +13,7 @@
 
     <!-- Archivo JS -->
     <script type="module" src="scripts.js"></script>
+    <script type="module" src="login.js"></script>
 
     <!-- Agregamos las fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -210,3 +211,4 @@
 
 </body>
 </html>
+
