--- a/register.html
+++ b/register.html
@@ -13,6 +13,7 @@
 
     <!-- Archivo JS -->
     <script type="module" src="scripts.js"></script>
+    <script type="module" src="register.js"></script>
 
     <!-- Agregamos las fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
