--- a/task-Sol.html
+++ b/task-Sol.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="estilos CSS/Header_Footer_Styles.css">
 
     <!-- Estilo De la Página -->
-    <link rel="stylesheet" href="estilos CSS/TaskRegar_Styles.css">
+    <link rel="stylesheet" href="estilos CSS/TaskSol_Styles.css">
 
     <!-- Archivo JS -->
     <script type="module" src="scripts.js"></script>
