--- a/mi-perfil.html
+++ b/mi-perfil.html
@@ -122,7 +122,7 @@
       </ul>
 
       <h2 class="Cerrar-Sesion">
-        <a href="" class="Cerrar-Sesion">Cerrar sesión</a>
+        <a href="index.html" class="Cerrar-Sesion">Cerrar sesión</a>
       </h2>
     </aside>
     <!--Mi perfil-->
