--- a/login.html
+++ b/login.html
@@ -92,12 +92,12 @@
                     <!-- Botones de inicio de sesión con redes sociales -->
                     <p class="other-text">Iniciar sesión con:</p>
                     <div class="social-buttons">
-                        <button type="button" class="social-btn">
+                        <a href="https://accounts.google.com/v3/signin/identifier?continue=https%3A%2F%2Fadmin.google.com%2Fctech.mx%2FDashboard&hl=es&ifkv=AcMMx-eeYDrTGyzG16lxzd3PJDsOry7HB4lvwZ51-_TWek-SezACvCekkfwr81CUOyWRjzALWMCa&rip=1&sacu=1&service=CPanel&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S321316942%3A1732195563189131&ddm=1" class="social-btn">
                             <img src="img/fotos/images/googlelogo.png" alt="Google">
-                        </button>
-                        <button type="button" class="social-btn">
+                        </a>
+                        <a href="https://www.facebook.com/?locale=es_LA" class="social-btn">
                             <img src="img/fotos/images/facebooklogo.PNG" alt="Facebook">
-                        </button>
+                        </a>
                     </div>
     
                     <!-- Texto "¿No tienes cuenta aún?" y botón de registro -->
